// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Renders <Checkbox /> without crashing 1`] = `
<label
  class="_o-form__toggle_c1f407 _o-form__toggle--checkbox_c1f407"
>
  <input
    checked=""
    class="_o-form__toggle-input_c1f407 u-is-visually-hidden"
    name="name"
    type="checkbox"
    value="value"
  />
  <span
    class="_o-form__toggle-icon_c1f407"
  />
  <span
    class="_o-form__toggle-text_c1f407"
  >
    children
  </span>
</label>
`;

exports[`Renders <Radio /> without crashing 1`] = `
<label
  class="_o-form__toggle_c1f407 _o-form__toggle--radio_c1f407"
>
  <input
    checked=""
    class="_o-form__toggle-input_c1f407 u-is-visually-hidden"
    name="name"
    type="radio"
    value="value"
  />
  <span
    class="_o-form__toggle-icon_c1f407"
  />
  <span
    class="_o-form__toggle-text_c1f407"
  >
    children
  </span>
</label>
`;
